--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages.</p>
+<img src="http://chromenoisehk.github.io/ssibal.jpg">
 	<p>Boorugi</p>
 </body>
 </html>
