--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 
 <html>
 <head>
-	<title>Hello, Github!</title>
+	<title>Æø ÆÄ ¾¤</title>
 </head>
 	
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages.</p>
-<img src="http://chromenoisehk.github.io/ssibal.jpg">
-	<p>Boorugi</p>
+<img src="http://chromenoisehk.github.io/70070.jpg">
+	<h1>È¯»óÀÇ ÆøÆÄ¾¤!</h1>
+	<p>¹º°¡ º¸¿©µå¸®°Ú½À´Ï´Ù!</p>
+
+	<p>-Boorugi-</p>
 </body>
 </html>
