change fike type -> utf-8

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Æø ÆÄ ¾¤</title>
+	<title>í­ íŒŒ ì‘ˆ</title>
 </head>
 	
 <body>
 <img src="http://chromenoisehk.github.io/70070.jpg">
-	<h1>È¯»óÀÇ ÆøÆÄ¾¤!</h1>
-	<p>¹º°¡ º¸¿©µå¸®°Ú½À´Ï´Ù!</p>
+	<h1>í™˜ìƒì˜ í­íŒŒì‘ˆ!</h1>
+	<p>ë­”ê°€ ë³´ì—¬ë“œë¦¬ê² ìŠµë‹ˆë‹¤!</p>
 
 	<p>-Boorugi-</p>
 </body>
