--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
-﻿<!DOCTYPE html>
-
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>폭 파 쑈</title>
+    <link href="css/egih.css" rel="stylesheet">
+    <title>LEONAAAAAAAA!</title>
 </head>
-	
 <body>
-<img src="http://chromenoisehk.github.io/70070.jpg">
-	<h1>환상의 폭파쑈!</h1>
-	<p>뭔가 보여드리겠습니다!</p>
-
-	<p>-Boorugi-</p>
-
-
-<style>body {-webkit-transform: rotateZ(90deg); -ms-transform: rotateZ(90deg); -moz-transform: rotateZ(90deg); -
-o-transform: rotateZ(90deg); transform: rotateZ(90deg); } </style>
-
-
+    <canvas width="1920" height="479" id="myCanvas"></canvas>
+    <script src="js/howler.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/getinhere.js"></script>
 </body>
 </html>
-
-
