--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,12 @@
 ﻿<html>
 <head>
-<link rel="stylesheet" href="css\egih.css">
-<title>LEONAAAAAAAAAA</title></head>
+    <link href="css/egih.css" rel="stylesheet">
+    <title>LEONAAAAaA!</title>
+</head>
 <body>
-<canvas id="myCanvas"></canvas>	
-<script src="js\howler.js"></script>
-<script src="js\jquery.js"></script>    
-<script src="js\getinhere.js"></script>
+    <canvas width="1920" height="1080" id="myCanvas"></canvas>
+    <script src="js/howler.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/getinhere.js"></script>
 </body>
 </html>
