--- a/Rengar/index.htm
+++ b/Rengar/index.htm
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
     <link href="css/egih.css" rel="stylesheet">
-    <title>LEONAAAAaA!</title>
+    <title>RENGGGAAAAAR!</title>
 </head>
 <body>
     <canvas width="1920" height="1080" id="myCanvas"></canvas>
