--- a/edit/index.htm
+++ b/edit/index.htm
@@ -4,6 +4,8 @@
     <title>LEONAAAAaA!</title>
 </head>
 <body>
+    <img src="image/gp.png" width="1" height="1">
+    <img src="image/gpg.png" width="1" height="1">
     <canvas width="1920" height="1080" id="myCanvas"></canvas>
     <script src="js/howler.js"></script>
     <script src="js/jquery.js"></script>
