--- a/freelancer/index.html
+++ b/freelancer/index.html
@@ -54,13 +54,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">매크로</a>
+                        <a href="#services">Services</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">ToS</a>
+                        <a href="#tos">ToS</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">연락</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -86,7 +86,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -160,7 +160,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+    <section class="success" id="tos">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
