--- a/freelancer/index.html
+++ b/freelancer/index.html
@@ -76,9 +76,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">세상에서 제일 발전된 기술들을 만나보세요!</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Auto - Macro - Hack - File Find Service - Web Programming... </span>
                     </div>
                 </div>
             </div>
@@ -164,21 +164,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>ToS</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>오토/매크로 작업 시, </p>
+                    <p>□ 고객의 사정으로 인한 중단이나 계정 정지에 관한 피해보상은 일체 하지 않습니다.</p>
+                    <p>□ 프로그램의 업데이트로 인하여 작업을 며칠간 못 할 수 있습니다. 그 기간만큼 추가 연장됩니다.</p>
+                    <p>□ 작업 도중에 제가 강제 중단을 할 수 있습니다. 이때, 남은 시간(일수)에 따라 환불처리를 해 줍니다.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>매크로 프로그래밍/웹 프로그래밍/프로그래밍은 작업량과 난이도에 따라 가격 책정이 다르게 됩니다.</p>
+                    <p>핵의 경우, 게임의 버전이 업데이트되면 짧게는 10분, 길게는 1주일까지 시간이 걸립니다.</p>
                 </div>
             </div>
         </div>
