--- a/freelancer/index.html
+++ b/freelancer/index.html
@@ -76,7 +76,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">세상에서 제일 발전된 기술들을 만나보세요!</span>
+                        <span class="name">"세상에서 제일 발전된"<br>기술들을 만나보세요!</span>
                         <hr class="star-light">
                         <span class="skills">Auto - Macro - Hack - File Find Service - Web Programming... </span>
                     </div>
