--- a/drive/upload_frame.html
+++ b/drive/upload_frame.html
@@ -1,24 +1,102 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Berryz WebShare</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0" />
+
+<style type="text/css">
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+
+html, body {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	font-family: 'Nanum Gothic', serif;
+	line-height: 100%;
+	font-size: 12px;
+}
+
+body {
+	background: #f1f1f1;
+}
+
+a {
+	color: #000;
+	text-decoration: none;
+}
+a:hover {
+	color: #888;
+	text-decoration: none;
+}
+
+img {
+	border: none;
+}
+
+div,
+span {
+	box-sizing: border-box;
+}
+
+a,
+table tbody tr {
+-webkit-transition: all .5s ease, margin .5s ease;
+   -moz-transition: all .5s ease, margin .5s ease;
+    -ms-transition: all .5s ease, margin .5s ease;
+     -o-transition: all .5s ease, margin .5s ease;
+        transition: all .5s ease, margin .5s ease;
+}
+
+#wrap {
+	width: 100%;
+	height: 100%;
+}
+
+#header {
+	padding: 20px 10px 15px;
+	background: #333;
+	border-bottom: 2px solid #2a2a2a;
+	text-shadow: 1px 1px #222;
+	box-shadow: 0 0 10px #2a2a2a;
+}
+#header h1 {
+	margin: 0;
+	padding: 0;
+	font-size: 15px;
+	color: #eee;
+}
+#article {
+	margin-top: 20px;
+}
+
+#uploadPath,
+#uploadForm,
+#statusText {
+	padding: 0 10px 10px;
+}
+#statusProgress {
+	margin: 0 10px 10px;
+}
+</style>
 </head>
 
-<body bgcolor="#FFFFFF" style='margin:0'>
-	<div style='background-color:#5A82D6; color:#ffffff; font-family:Tahoma; font-weight:normal; font-size:18px; padding:5px;'>
-		Berryz WebShare
+<body>
+<div id="wrap">
+	<div id="header">
+		<h1>File Upload</h1>
 	</div>
-	<div id='uploadPath' style='margin:10px; font-family:Gulim; font-size:9pt;'></div>
-	<div id='uploadForm' style='margin:10px;'></div>
-	<div id='statusText' style='margin:10px; padding:5px; font-family:Gulim; font-size:9pt; display:none;'></div>
-	<div id='statusProgress' style='margin-left:10px; margin-right:10px; font-family:Gulim; font-size:9pt; display:none;'></div>
-	<div id='statusStream' style='display:none;'></div>
+	<div id="article">
+		<div id="uploadPath"></div>
+		<div id="uploadForm"></div>
+		<div id="statusText"></div>
+		<div id="statusProgress"></div>
+		<div id="statusStream" style="display:none;"></div>
+	</div>
+</div>
 
 <script language="JavaScript" type="text/javascript">
-/////////////////////////////////////////////////////////////////////////////
 // LIBRARY: UTF8URLDecode
 function UTF8URLDecode( req )
 {
@@ -88,8 +166,8 @@ var plainPath = UTF8URLDecode(urlPath);
 
 var skinName  = loc.split('#')[1].split('*')[1];
 
-document.getElementById('uploadPath').innerHTML = "업로드 폴더: " + plainPath;
-document.getElementById('uploadForm').innerHTML = "<iframe src='/"+skinName+"/upload_form.html?action=SkinFile#" + urlPath + "' width='100%' height='30px' scrolling='no' frameborder='0'/>";
+document.getElementById('uploadPath').innerHTML = "<b>업로드 폴더 :</b> <span>" + plainPath + "</span>";
+document.getElementById('uploadForm').innerHTML = "<iframe src='/"+skinName+"/upload_form.html?action=SkinFile#" + urlPath + "' width='100%' height='25px' scrolling='no' frameborder='0'/>";
 
 function onBeginUpload( filename, key )
 {
@@ -116,8 +194,6 @@ function onUpdateProgress( percentage )
 	"</table>" ;
 //	alert(document.getElementById('statusProgress').innerHTML);
 }
-
-/////////////////////////////////////////////////////////////////////////////
 </script>
 
 </body>
